--- a/templates/base.html
+++ b/templates/base.html
@@ -21,16 +21,15 @@
       <a class="nav-link" href="/detik-populer">Gambar Detik populer</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/json-crawler">[Json-Crawler]</a>
+      <a class="nav-link" href="/idr-rates">IDR-rate</a>
     </li>
   </ul>
 </nav>
 
 <div class="container-fluid" style="margin-top:80px; text-align:center">
-    {% for image in images %}
-        {{ image|safe }}
-        <a href="{{ image.find('a')['href']|safe }}">{{ image.find('a').find('img')['title']|safe }} </a>
-    {% endfor%}
+    {% block body %}
+
+    {% endblock %}
 </div>
 
 </body>
